--- a/Visualization/first_project.html
+++ b/Visualization/first_project.html
@@ -19,7 +19,7 @@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js/dist/chart.umd.min.js"></script>
 
     <script>
-    // setup 
+    // setting up the data and the colors of the bars.
     const data = {
       labels: ['Pollotarian', 'Vegetarian', 'Pescatarian', 'Non-Vegetarian', 'Eggetarian', 'Pollo-pesceterian'],
       datasets: [{
@@ -45,7 +45,7 @@
       }]
     };
 
-    // config 
+    // configuring the bar chart 
     const config = {
       type: 'bar',
       data,
